...
  final TextEditingController _uscIdController = TextEditingController();
  final TextEditingController _confirmPasswordController =
      TextEditingController();
  final TextEditingController _roleController = TextEditingController();
  final _originalEmailDecoration = const InputDecoration(
    icon: Icon(Icons.email),
    label: Text('USC Email'),
  );
  final _originalNameDecoration = const InputDecoration(
    icon: Icon(Icons.person),
    label: Text('Name'),
  );
  final _originalUscIdDecoration = const InputDecoration(
    icon: Icon(Icons.credit_card),
    label: Text('USC ID'),
  );
  final _originalPasswordDecoration = const InputDecoration(
    icon: Icon(Icons.password),
    label: Text('Password'),
  );
  final _originalConfirmPasswordDecoration = const InputDecoration(
    icon: Icon(Icons.password),
    label: Text('Confirm Password'),
  );

  late InputDecoration _emailDecoration;
  late InputDecoration _nameDecoration;
  late InputDecoration _passwordDecoration;
  late InputDecoration _confirmPasswordDecoration;
...
          context: context,
          builder: (_) => AlertDialog(
                content: const Text('Role cannot be empty'),
                actions: [
                  TextButton(
                      onPressed: () => Navigator.pop(context),
                      child: const Text('OK'))
                ],
              ));
      return false;
    } else {
      return true;
    }
...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Create Account'),
      ),
      body: Padding(
          padding: const EdgeInsets.all(16.0),
          child: ListView(children: [
            SizedBox(
                height: 140,
...
              mainAxisSize: MainAxisSize.max,
              children: [
                const Icon(Icons.people),
                const SizedBox(width: 16.0),
                DropdownMenu(
                  controller: _roleController,
                  label: const Text('Role'),
                  dropdownMenuEntries: roles
                      .map(
                          (role) => DropdownMenuEntry(value: role, label: role))
                      .toList(),
                  inputDecorationTheme: const InputDecorationTheme(),
                )
...
                        child: const Text('Pick Profile Picture'))),
                SizedBox(height: 8.0),
                SizedBox(
                    width: double.infinity,
                    child: FilledButton(
                        onPressed: onPressedSignUp,
                        child: const Text('Sign Up'))),
              ]),
            ),
          ])),
    );
  }
}
...
